# pot-diff

./: Cargo.toml
examples/: basic.rs
src/: binary.rs  lib.rs  tests.rs  text.rs
